[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Camera.gd" type="Script" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]
[ext_resource path="res://UI/Level.gd" type="Script" id=3]
[ext_resource path="res://UI/Menu.gd" type="Script" id=4]

[node name="Camera" type="Camera2D"]
current = true
limit_left = 1000
limit_top = 1000
limit_right = 1000
limit_bottom = 1000
script = ExtResource( 1 )

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_left = -612.0
margin_top = -400.0
margin_right = 612.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/HUD"]
margin_right = 1024.0
margin_bottom = 30.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI/HUD"]
margin_right = 1024.0
margin_bottom = 30.0
align = 2
valign = 1

[node name="Lives" type="Label" parent="UI/HUD"]
margin_top = 570.0
margin_right = 1024.0
margin_bottom = 600.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UI/HUD"]
margin_top = 538.0
margin_right = 1024.0
margin_bottom = 568.0
text = "Health: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="Label" parent="UI/HUD"]
margin_left = -37.0
margin_top = 538.0
margin_right = 987.0
margin_bottom = 568.0
text = "Armor:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="UI/HUD"]
margin_left = -37.0
margin_top = 553.0
margin_right = 987.0
margin_bottom = 583.0
text = "Damage:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon_Upgrade" type="Label" parent="UI/HUD"]
margin_left = -36.0
margin_top = 569.0
margin_right = 988.0
margin_bottom = 599.0
text = "Weapon Upgrades:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/HUD"]
autostart = true

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
margin_right = 1025.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Label" type="Label" parent="UI/Menu"]
margin_right = 1024.0
margin_bottom = 400.0
text = "Game Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="UI/Menu"]
margin_left = 462.0
margin_top = 350.0
margin_right = 562.0
margin_bottom = 390.0
text = "Restart Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="UI/Menu"]
margin_left = 462.0
margin_top = 300.0
margin_right = 562.0
margin_bottom = 340.0
text = "Save/Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="UI/Menu"]
margin_left = 462.0
margin_top = 400.0
margin_right = 562.0
margin_bottom = 440.0
text = "Quit"

[node name="Level" type="Control" parent="UI"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Level"]
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Level"]
margin_top = 250.0
margin_right = 1024.0
margin_bottom = 264.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="UI/Level"]
margin_top = 350.0
margin_right = 1024.0
margin_bottom = 364.0
align = 1
valign = 1

[node name="Timer" type="Timer" parent="UI/Level"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="UI/HUD/Timer" to="UI/HUD" method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/Menu/Restart" to="UI/Menu" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Menu/Save" to="UI/Menu" method="_on_Save_pressed"]
[connection signal="pressed" from="UI/Menu/Quit" to="UI/Menu" method="_on_Quit_pressed"]
[connection signal="timeout" from="UI/Level/Timer" to="UI/Level" method="_on_Timer_timeout"]
